# Electrifind

./: .gitignore  EV_MODEL_Sentiment_Analysis_Nov8.ipynb  GPT_prompt.ipynb  GPT_sentiment_analysis.ipynb  Google_Map_Review_API.ipynb  Joint_Data_Model.ipynb  NREL_All_Stations_API.ipynb  NREL_All_Stations_API.py  NREL_All_Stations_ML.ipynb  NREL_All_Stations_Preprocessing.ipynb  README.md  Review_Feature_Extractor.ipynb  app.py  pyproject.toml  requirements.txt  vector_ranker.py
archive/: coordinates.train.txt  station_personalized_features.csv
data/: .~lock.NREL_raw.csv#  Aspect.csv  GPT_analysis2023-11-12.csv  GPT_analysis_AA_DTW.csv  Google_Map_review_data_AA_DTW.csv  Google_Map_review_data_aggregated.csv  NREL_map.csv  coordinates.test.txt  coordinates.train.txt  docid_NREL_map.csv  encoded_station.npy  encoded_user_profile.npy  filtered_nrel.csv  index.pkl  main_index.pkl  processed_nrel.csv  proj_relevance.shaoze.csv  proj_relevance.zim.csv  relevance.dev.csv  relevance.test.csv  relevance.train.csv  row_to_docid.txt  station_personalized_features.csv  title_index.pkl  u.base  u.test  u.train  user_profile.csv
database/: NREL_all_stations_data.sql  workbench.ipynb
electrifind/: __init__.py  auth.py  blog.py  db.py  engine.py  schema.sql
engine/: Interactive_Example.ipynb  app.py  document_preprocessor.py  indexing.py  l2r.py  network_features.py  pipeline.py  ranker.py  relevance.py  vector_ranker.py
notebook/: Deep Learning Factorization model.ipynb  GPT_prompt.ipynb  GPT_sentiment_analysis.ipynb  Google_Map_Find_API.ipynb  Joint_Data_Model.ipynb  (+9 more)
(+252 files in other folders)
