[project]
name = "electrifind"
version = "1.0.0"
description = "The UX-focused EV charging station finder."
readme = "README.md"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flaskr"]